--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,13 @@
   "manifest_version": 2,
   "name": "Github Dark",
   "author": "Johnendz",
-  "version": "1.0",
+  "version": "1.1",
 
   "content_scripts": [
     {
       "matches": ["*://github.com/*"],
       "css":["style.css"],
+      "js": ["jquery.min.js", "project-board.js"],
 	  "run_at": "document_start"
     }
   ],
